--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,8 @@
     <title>Segundo commit</title>
 </head>
 <body>
-    
+    <div>
+        <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, illo! Quo dolor quasi consequuntur obcaecati delectus odio, asperiores aperiam. Quidem nam at quas ullam quia. Aut, ducimus suscipit quo facere, temporibus ut doloribus ratione nesciunt consequatur nam rem, atque dicta laboriosam magnam quae dolores tenetur omnis! Sit vero quaerat sint.</h2>
+    </div>
 </body>
 </html>
